--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase-admin": "^13.4.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
